--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 .navbar ul.nav>li>a {
   text-decoration: none;
 }
@@ -40,4 +40,8 @@ nav a.active {
 
 .border-flat {
   border-radius: 0;
+}
+
+.icon {
+  border-color: transparent;
 }
