owl-carousel replaced by bootstrap carrousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -209,39 +209,47 @@ Sign Up </a>
   </div>
 </section>
 
-    
 
-
-<section class="bar background-gray no-mb">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <ul class="owl-carousel customers">
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="asdasd" class="img-responsive">
-          </li>
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="asdasd" class="img-responsive">
-          </li>
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="adasd" class="img-responsive">
-          </li>
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="dasdasd" class="img-responsive">
-          </li>
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="adas" class="img-responsive">
-          </li>
-          <li class="item">
-            <img src="../../../assets/img/customer-1.png" alt="dada" class="img-responsive">
-          </li>
-        </ul>
-        <!-- /.owl-carousel -->
-      </div>
-
+<div class="bs-example">
+    <div id="myCarousel" class="carousel slide" data-interval="2000" data-ride="carousel">
+    	<!-- Carousel indicators -->
+        
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="active item">
+                <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png" alt="First Slide">
+         		<div class="carousel-caption">
+                  
+                  <h3>Angular 4</h3>
+                  
+                  
+                </div>
+            </div>
+            <div class="item">
+                <img class ="size-image" src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png" alt="Second Slide">
+                <div class="carousel-caption">
+                  
+                  <p>El lenguaje de programación simple y libre.</p>
+                  
+                </div>
+            </div>
+            <div class="item">
+                <img    src="http://kforce.org.nz/thumbs/2000x2000r/2016-12/auto_desk_inventor.png" alt="Third Slide">
+                <div class="carousel-caption">
+              
+                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
     </div>
-  </div>
-</section>
+</div>
 
 
 
