--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -1,19 +1,21 @@
-<div class="col-xs-12">
+<div class="col-xs-12 col-sm-10 col-sm-offset-1">
   <h1 class="page-header">Cotiza ahora!</h1>
-  <hr>
-
-  <div class="col-xs-12 text-center">
-    <a href="javascript: void(0);" class="btn btn-lg btn-template-main" routerLink="quotation/doors">Puertas Rápidas</a>
-    <a href="javascript: void(0);" class="btn btn-lg btn-template-main" routerLink="quotation/machinery">Maquinaria Pesada</a>
-    <a href="javascript: void(0);" class="btn btn-lg btn-template-main" routerLink="quotation/legos">Fichas Legos</a>
-  </div>
+  <p class="text-justify">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <br>
 
   <div class="clearfix"></div>
+  <br>
 
-  <div class="col-xs-12">
+  <ul class="nav nav-tabs nav-justified" role="tablist">
+    <li role="presentation" [routerLinkActive]="['active']"><a href="#home" routerLink="/quotation/doors" aria-controls="home" role="tab" data-toggle="tab">Puertas Rápidas</a></li>
+    <li role="presentation" [routerLinkActive]="['active']"><a href="#profile" routerLink="/quotation/machinery" aria-controls="profile" role="tab" data-toggle="tab">Maquinaria Pesada</a></li>
+    <li role="presentation" [routerLinkActive]="['active']"><a href="#messages" routerLink="/quotation/legos" aria-controls="messages" role="tab" data-toggle="tab">Fichas Legos</a></li>
+  </ul>
+  <div class="well well-sm border-flat">
     <router-outlet></router-outlet>
   </div>
-
-  <div class="clearfix"></div>
 </div>
-<div class="clearfix"></div>
+<div class=" clearfix "></div>
