--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
   <h1 class="page-header">Cotiza ahora!</h1>
   <p class="text-justify">
@@ -9,7 +11,7 @@
   <div class="clearfix"></div>
   <br>
 
-  <ul class="nav nav-tabs nav-justified" role="tablist">
+  <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" [routerLinkActive]="['active']"><a href="#home" routerLink="/quotation/doors" aria-controls="home" role="tab" data-toggle="tab">Puertas Rápidas</a></li>
     <li role="presentation" [routerLinkActive]="['active']"><a href="#profile" routerLink="/quotation/machinery" aria-controls="profile" role="tab" data-toggle="tab">Maquinaria Pesada</a></li>
     <li role="presentation" [routerLinkActive]="['active']"><a href="#messages" routerLink="/quotation/legos" aria-controls="messages" role="tab" data-toggle="tab">Fichas Legos</a></li>
