select product implemented in quotation

--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -1,60 +1,1 @@
-<p>
-  legos works!
-</p>
-
-{{legos|json}}
-<select>
-  <option value="volvo">asdas</option>
-  <option value="saab">Saab</option>
-  <option value="opel">Opel</option>
-  <option value="audi">Audi</option>
-</select>
-
-
-<select [(ngModel)]="selectedValue">
-  <option *ngFor="let lego of legos" [ngValue]="lego">{{lego.name}}</option>
-</select>
-
-
-<hr>
-
-<mat-slider id="slider"></mat-slider>
-
-<mat-slider vertical thumbLabel tickInterval="1">100</mat-slider>
-
-
-
-
-
-<figure >
-
-<svg  width="335" height="75" viewBox="0 0 250 75"
-     preserveAspectRatio="xMinYMin meet"
-     style="border: 1px solid #cccccc;">
-
-    <svg:rect class="puerta"  x="1" y="1"  width="100" height="150"/>
-
-</svg>
-
-
-<mat-card class="SliderConfigurableExample">
-  <mat-card-content>
-    <h2 class="example-h2">Result</h2>
-
-    <mat-slider
-        class="example-margin" thumbLabel tickInterval="1" SliderConfigurableExample
-        [disabled]="disabled"
-        [invert]="invert"
-        [max]="max"
-        [min]="min"
-        [step]="step"
-        
-        [value]="value"
-        [vertical]="vertical">
-    </mat-slider>
-  </mat-card-content>
-</mat-card>
-
-</figure>
-
-
+ adnkjsadjsa
