--- a/src/app/pages/quotation/legos-quotation/legos-quotation.component.html
+++ b/src/app/pages/quotation/legos-quotation/legos-quotation.component.html
@@ -1,3 +1,4 @@
-<p>
-  legos-quotation works!
-</p>
+<select class="form-control" [(ngModel)]="selectedValue">
+  <option *ngFor="let lego of legos" [ngValue]="lego">{{ lego.name }}</option>
+</select>
+<h3>{{ selectedValue ? selectedValue.name : 'Nada' }}</h3>
