--- a/src/app/pages/quotation/doors-quotation/doors-quotation.component.html
+++ b/src/app/pages/quotation/doors-quotation/doors-quotation.component.html
@@ -1,8 +1,20 @@
-<select class="form-control" [(ngModel)]="selectedValue">
-  <option *ngFor="let door of doors" [ngValue]="door">{{ door.name }}</option>
-</select>
-<h3>{{ selectedValue ? selectedValue.name : 'Nada' }}</h3>
+<div class="col-xs-12">
+  <div class="form-group">
+    <label class="control-label">Tipo de producto:</label>
+    <select class="form-control" [(ngModel)]="selectedValue">
+      <option *ngFor="let door of doors" [ngValue]="door">{{ door.name }}</option>
+    </select>
+  </div>
+</div>
 
+<div class="col-xs-12" *ngIf="selectedValue && selectedValue.id === 1">
+  <div class="col-xs-12 col-sm-6" *ngFor="let characteristic of selectedValue.characteristics">
+    <div class="form-group">
+      <label class="control-label">{{ characteristic.name }}:</label>
+      <input type="characteristic.type" [(ngModel)]="characteristic.value" class="form-control" />
+    </div>
+  </div>
+</div>
 
 <div>
   <div style=" wibackground:lightgray;">
@@ -14,73 +26,4 @@
       {{color}}
     </mat-radio-button>
   </mat-radio-group>
-</div>
-<!--
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
--->
-<div class="container">
-  <section class="demo">
-    <h1>
-      Puertas - Cotización
-    </h1>
-    <hr/>
-    <div>
-      <form #f="ngForm" novalidate>
-        <form-wizard (onStepChanged)="onStepChanged($event)">
-          <wizard-step [title]="'Paso 1'" [isValid]="f.form.valid" (onNext)="onStep1Next($event)">
-            <h1>Paso 1</h1>
-            <p class="lead">El email es requerido para proceder con el siguiente paso</p>
-
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" [(ngModel)]="data.email" required>
-              <small id="emailHelp" class="form-text text-muted">
-            Nosotros no compartiremos tu email con nadie.</small>
-            </div>
-
-
-            <div class="form-group">
-              <label>Color</label>
-              <select name="color" class="form-control" [(ngModel)]="puertaRapida.color" required>
-                <option *ngFor="let color of colors" [value]="color.value">{{color.display}}</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label>Ancho</label>
-              <input type="number" class="form-control" name="width" [(ngModel)]="puertaRapida.width" required>
-            </div>
-
-            <div class="form-group">
-              <label>Alto</label>
-              <input type="number" class="form-control" name="height" [(ngModel)]="puertaRapida.height" required>
-            </div>
-
-          </wizard-step>
-
-          <wizard-step [title]="'Paso 2'" (onComplete)="onComplete($event)">
-            <div [ngSwitch]="isCompleted">
-              <div *ngSwitchDefault>
-                <h1>Paso 2</h1>
-                <p class="lead">Este es el paso final</p>
-              </div>
-              <div *ngSwitchCase="true">
-                <h4>Gracias {{data.email}}! Completaste todos los pasos.</h4>
-
-                <div style="margin-top: 20px" *ngIf="f">
-                  <div>Form values:-</div>
-                  <pre>submitted value: <br>{{f.value | json}}</pre>
-                </div>
-              </div>
-            </div>
-
-          </wizard-step>
-        </form-wizard>
-      </form>
-    </div>
-  </section>
 </div>
