[maquinaria] iframe responsive add

--- a/src/app/pages/products/machinery/machinery.component.html
+++ b/src/app/pages/products/machinery/machinery.component.html
@@ -1,3 +1,42 @@
-<p>
-  machinery works!
-</p>
+<section class="bar background-image-fixed-2 no-mb color-white text-center">
+  <div class="dark-mask"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="text-uppercase">Maquinaria Pesada</h1>
+        <p class="lead">Filtra por tipos de maquinaria y visualiza sus defectos facilmente.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section class="bar background-gray no-mb padding-big text-center-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="text-uppercase">Por donde la desees mirar! </h2>
+        <p class="lead mb-small">Presiona la imagen <span class="glyphicon glyphicon glyphicon-hand-right"></span></p>
+        <p class="mb-small">Te enviaremos a tu correo un render muy similar como este para que puedas visualizar el producto por cualquier lugar.</p>
+      </div>
+      <div class="col-md-6 text-center">
+
+        <div class="embed-container">
+          <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=88ec1ce613f600a3f3cd94dd07a05e9e&width=565&height=317" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+<h1>Drag the black border ↔ pure Css</h1>
+<div class='alfa' title='Primavera'>
+  <div class='bravo' title='Otoño'>
+    <textarea readonly cols='0' rows='0' class='charly'></textarea>
+  </div>
+</div>
+<p>Credits:Original idea: <a href='https://codepen.io/solipsistacp/pen/Gpmaq/'>solipsistaCP</a></p>
