--- a/src/app/pages/products/machinery/machinery.component.html
+++ b/src/app/pages/products/machinery/machinery.component.html
@@ -26,17 +26,31 @@
         </div>
       </div>
     </div>
+
   </div>
 </section>
+<hr class="style-two">
 
+<section class="bar background-gray  no-mb padding-big text-center-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h2>Detecta daños en partes de la maquinaria </h2>
+        <p class="lead mb-small">Interactua con la imagen <span class="glyphicon glyphicon glyphicon-hand-right"></span></p>
+        <p class="mb-small">Recibiras en tu correo un modelo para que visualices la maquinaria de manera correcta y tambien otro modelo en el que se resaltan las partes dañadas.</p>
+      </div>
+      <div class="col-md-6 text-center">
+        <h1>Mueve el icono de la imagen  <span class="glyphicon glyphicon-resize-horizontal"></span> </h1>
+        <div class='alfa' title='Primavera' alt="https://codepen.io/solipsistacp/pen/Gpmaq/">
+          <div class='bravo' title='Otoño'>
+            <textarea readonly cols='0' rows='0' class='charly'></textarea>
+          </div>
+        </div>
 
-
-
-
-<h1>Drag the black border ↔ pure Css</h1>
-<div class='alfa' title='Primavera'>
-  <div class='bravo' title='Otoño'>
-    <textarea readonly cols='0' rows='0' class='charly'></textarea>
+      </div>
+      <div class="col-md-3 text-center">
+        dsakjfsdlngljadngfs sd g dsfhdf gfd
+      </div>
+    </div>
   </div>
-</div>
-<p>Credits:Original idea: <a href='https://codepen.io/solipsistacp/pen/Gpmaq/'>solipsistaCP</a></p>
+</section>
