--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -1,5 +1,5 @@
 <section class="bar background-image-fixed-3 no-mb color-white text-center">
-  <div class="dark-mask"></div>
+  <div class="blue-mask"></div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -23,7 +23,7 @@
           <div class="card-body">
             <img class="img-responsive" src="https://sh-s7-live-s.legocdn.com/is/image/LEGO/5004267?$main$">
             <p class="card-p" align="justify">
-              El proceso de costrucción de una ficha de Lego esta automatizado casi en su totalidad,debido a la cantidad de fichas que se fabrican , como la precisión necesaria para fabricar una ficha por tanto es necesario crear modelos y que mejor manera de generar
+              El proceso de construcción de una ficha de Lego esta automatizado casi en su totalidad,debido a la cantidad de fichas que se fabrican , como la precisión necesaria para fabricar una ficha por tanto es necesario crear modelos y que mejor manera de generar
               estos modelos que apartir de un aplicativo web.Es por esto que al realizar tú cotización podras obtener modelos medianamente automatizados directamente en tu correo.
             </p>
             <button type="button" class="btn btn-lg btn-primary">Personaliza tu Lego</button>
@@ -39,7 +39,7 @@
 
 
           <div class="card-header-blue">
-            <h1 class="card-heading">Ensambla con tu imaginación </h1>
+            <h1 class="card-heading">Diseño a tus medidas </h1>
           </div>
 
 
@@ -55,7 +55,15 @@
             <div class="col-md-8 lead mb-small card-p">
               Puedes variar el tamaño de tus legos en todas sus dimensiones, tambien puedes escoger la cantidad de legos que deseas obtener en tu cotización.
 
+
             </div>
+
+
+
+
+
+
+
             <div class="clearfix">
             </div>
           </div>
@@ -65,48 +73,34 @@
 
 
           <div class="card-header-blue">
-            <h2 class="card-heading">Selecciona entre algunos de los siguientes colores</h2>
+            <h2 class="card-heading">Selecciona el color de tus legos</h2>
           </div>
+
+          <div class="box col-md-8"></div>
+          <div class="highlight"></div>
+
+          <div class="clearfix">
+          </div>
+
+
+
         </div>
 
 
-        <div id="carousel" class="col-md-8 carousel slide carousel-fade" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel" data-slide-to="1"></li>
-            <li data-target="#carousel" data-slide-to="2"></li>
-          </ol>
-          <!-- Carousel items -->
-          <div class="carousel-inner carousel-zoom">
-            <div class="active item"><img class="img-responsive" src="https://images.unsplash.com/photo-1419064642531-e575728395f2?crop=entropy&fit=crop&fm=jpg&h=400&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1200">
-              <div class="carousel-caption">
-                <h2>ROJO</h2>
-                <p>Description</p>
-              </div>
-            </div>
-            <div class="item"><img class="img-responsive" src="https://images.unsplash.com/photo-1445280471656-618bf9abcfe0?crop=entropy&fit=crop&fm=jpg&h=400&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1200">
-              <div class="carousel-caption">
-                <h2>Title</h2>
-                <p>Description</p>
-              </div>
-            </div>
-            <div class="item"><img class="img-responsive" src="https://images.unsplash.com/photo-1445462657202-a0893228a1e1?crop=entropy&fit=crop&fm=jpg&h=400&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1200">
-              <div class="carousel-caption">
-                <h2>Title</h2>
-                <p>Description</p>
-              </div>
-            </div>
-          </div>
-          <!-- Carousel nav -->
-          <a class="carousel-control left" href="#carousel" data-slide="prev">‹</a>
-          <a class="carousel-control right" href="#carousel" data-slide="next">›</a>
-        </div>
+
 
 
 
 
 
       </div>
+
+
+
+
+
+
+
     </div>
   </div>
 </section>
