--- a/src/app/pages/products/machinery/machinery.component.css
+++ b/src/app/pages/products/machinery/machinery.component.css
@@ -30,6 +30,7 @@
 .style-two {
   border: 0;
   height: 1.5vh;
+  margin: 0;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
