--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -16,18 +16,37 @@
       </ul>
     </div>
     <div class="col-xs-12 col-sm-9">
-      <div class="well well-sm border-flat" *ngIf="selectedProductType">
-        <h2 class="page-header">{{ selectedProductType.name }} <small>{{ selectedProductType.description }}</small></h2>
-        <div class="col-xs-12 col-sm-6">
-          <select class="form-control" [(ngModel)]="selectedProduct" (ngModelChange)="selectProduct(selectedProduct)">
-            <option *ngFor="let product of selectedProductType.products" [ngValue]="product">{{ product.name }}</option>
-          </select>
+      <div class="with-borders border-flat" *ngIf="selectedProductType">
+        <div class="jumbotron quotation-jumbotron">
+          <h1>{{ selectedProductType.name }}</h1>
+          <p>{{ selectedProductType.description }}</p>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-6">
+            <label class="control-label text-strong">Producto: </label>
+            <select class="form-control" [(ngModel)]="selectedProduct" (ngModelChange)="selectProduct(selectedProduct)">
+              <option *ngFor="let product of selectedProductType.products" [ngValue]="product">{{ product.name }}</option>
+            </select>
+          </div>
         </div>
         <div class="clearfix"></div>
-        <div class="col-xs-12 col-sm-6" *ngIf="selectedProduct">
-          <ul>
-            <li *ngFor="let property of selectedProduct.properties">{{ property.name }}</li>
-          </ul>
+        <br>
+        <div class="well well-sm form" *ngIf="showProductProperties">
+          <div *ngFor="let property of selectedProduct.properties; let idx = index">
+            <div class="clearfix" *ngIf="idx % 2 === 0"></div>
+            <div class="col-xs-12 col-sm-6">
+              <div class="form-group">
+                <label class="control-label">{{ property.name }}</label>
+                <input type="number" class="form-control" *ngIf="property.type !== 'bool'" />
+                <label *ngIf="property.type === 'bool'"><input type="radio"> Si</label>
+                <label *ngIf="property.type === 'bool'"><input type="radio"> No</label>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <button type="button" class="btn btn-template-main pull-right">Solicitar Cotización</button>
+          </div>
+          <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
       </div>
